--- a/about.html
+++ b/about.html
@@ -83,6 +83,15 @@
       </div>
 
       <div class="row about">
+        <h2> Or build a tool on your website that will raise awareness about an issue?</h2>
+	<p class="green">How much water is wasted with one leaky faucet?</p>
+	<input id="c"> leaks per minute</input>
+	<button onclick="calculate()">Try it!</button>
+	<p></p>
+	<p id="demo"></p>
+      </div>
+
+      <div class="row about">
         <h2> Or do you need to collect information about people's opinions on the issue?
         </h2>
 
@@ -90,11 +99,16 @@
 
       </div>
 
-
     </div>
 
-
-
+<script>
+function calculate() {
+    {
+	var F = document.getElementById("c").value;
+        document.getElementById("demo").innerHTML = Number(F) * Number(34) + " gallons of water per year!";
+    }
+}
+</script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
